--- a/QuizNewbye/Paginas/Questao2.xaml
+++ b/QuizNewbye/Paginas/Questao2.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="QuizNewbye.Paginas.Questao1"
-             Title="Pergunta 1">
+             x:Class="QuizNewbye.Paginas.Questao2"
+             Title="Pergunta 2">
     <VerticalStackLayout Margin="20">
         <Label 
             x:Name="LBLPergunta"
@@ -15,52 +15,38 @@
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
 
-        <Border
-            Background="GhostWhite"
-            Padding="20">
-            <Border.StrokeShape>
-                <RoundRectangle CornerRadius="20" />
-            </Border.StrokeShape>
-            <Border.Shadow>
-                <Shadow 
-                    Brush="LightGray"
-                    Offset="20,20"
-                    Radius="10"
-                    Opacity="0.8"/>
-            </Border.Shadow>
-            
+        <Border StrokeShape="RoundRectangle 20" Padding="20" Background="GhostWhite">
             <VerticalStackLayout>
 
         <RadioButton
-            Content="Vermelho"
+            Content="Alternativa 1"
             Value="errado"
-            TextColor="red"
+            TextColor="Black"
             FontAttributes="Italic"
             CheckedChanged="Verificar"/>
         
         <RadioButton
-            Content="Azul"
+            Content="Alternativa 2"
+            Value="errado"
+            TextColor="Black"
+            FontAttributes="Italic"
+            CheckedChanged="Verificar"/>
+        
+        <RadioButton
+            Content="Alternativa 3"
             Value="certo"
-            TextColor="blue"
+            TextColor="Black"
             FontAttributes="Italic"
             CheckedChanged="Verificar"/>
         
         <RadioButton
-            Content="Amarelo"
+            Content="Alternativa 4"
             Value="errado"
-            TextColor="yellow"
-            FontAttributes="Italic"
-            CheckedChanged="Verificar"/>
-        
-        <RadioButton
-            Content="Verde"
-            Value="errado"
-            TextColor="Green"
+            TextColor="Black"
             FontAttributes="Italic"
             CheckedChanged="Verificar"/>
             
             </VerticalStackLayout>
-            
         </Border>
 
         <Button 
